--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Cayman theme
-description: Cayman is a clean, responsive theme for GitHub Pages.
+title: test Mission
+description: test for Missison 2000 page.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
