--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: test Mission
-description: test for Missison 2000 page.
+title: Mission 2000 Interface
+description:
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
