--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Mission 2000 Interface
 show_downloads: true
 google_analytics:
+baseurl: "/Mission2000NPSDatabaseInterface"
 theme: jekyll-theme-cayman
